@@ -1,9 +1,12 @@
-2009-01-19
+2010-01-19
+	* src/minikafs.c: crank up debug verbosity (Chris Wing)
+
+2010-01-19
 	* src/minikafs.c: call krb5_allow_weak_crypto(), if defined, before
 	doing anything with DES.  call krb5_enctype_enable(), if defined,
 	before attempting to get a credential with a specific enctype.
 
-2009-01-07
+2010-01-07
 	* configure.in: check for krb5_change_password, krb5_set_password,
 	krb5_xfree
 	* src/v5.c: add v5_change_password(); make v5_free_unparsed_name()
